# UnrealAITest

./: .gitignore  README.md  UnrealAITest.uproject
Config/: DefaultEngine.ini  DefaultGame.ini
Content/: Test.umap
Content/AIAssistGenerated/: BP_CubePairDemo.uasset  BP_GreenCubeWASDPawn_27401.uasset  M_AIA_Green_Cube.uasset  M_AIA_Red_Cube.uasset
Plugins/UnrealEngineAIAssist/: .gitignore  CLAUDE.md  README.md  UnrealEngineAIAssist.uplugin  setup.py
Plugins/UnrealEngineAIAssist/Agents/: RULE.md
Plugins/UnrealEngineAIAssist/Agents/ArtTechnician/: SKILL.md
Plugins/UnrealEngineAIAssist/Agents/DataDesigner/: SKILL.md
Plugins/UnrealEngineAIAssist/Agents/GameplayProgrammer/: SKILL.md
Plugins/UnrealEngineAIAssist/Agents/LevelDesigner/: SKILL.md
Plugins/UnrealEngineAIAssist/Skills/device-bridge/: SKILL.md
Plugins/UnrealEngineAIAssist/Skills/renderdoc-capture/: SKILL.md
Plugins/UnrealEngineAIAssist/Skills/sync-claude/: SKILL.md
Plugins/UnrealEngineAIAssist/Skills/ue-agent-builder/: SKILL.md
Plugins/UnrealEngineAIAssist/Skills/ue-knowledge-init/: SKILL.md
Plugins/UnrealEngineAIAssist/Skills/ue-knowledge-reader/: SKILL.md
Plugins/UnrealEngineAIAssist/Skills/ue-knowledge-update/: SKILL.md
Plugins/UnrealEngineAIAssist/Skills/ue-python-script/: SKILL.md
Plugins/UnrealEngineAIAssist/Skills/ue-python-script/mcp_server/: pyproject.toml  readme.txt  unreal_agent_bridge_mcp.py
Source/: UnrealAITest.Target.cs  UnrealAITestEditor.Target.cs
Source/UnrealAITest/: UnrealAITest.Build.cs  UnrealAITest.cpp
(+40 files in other folders)
